welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: not found: value testingFunction
  while (!testingFunction()){
          ^SnakeBuggle:26: error: not found: value True
    case Direction.EAST => left(); if (isFacingWall()) {return True}; left;
                                                               ^SnakeBuggle:27: error: not found: value True
    case Direction.WEST => right(); if (isFacingWall()) {return True}; right;
                                                                ^